rpi5/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      name: nzbget
      annotations:
        linkerd.io/inject: enabled
      labels:
          app: nzbget
    spec:
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:26.3.20261009@sha256:90f08a0c260f5ba3be401d9b21f7a92975ac0fb2331bb1f456ed9f09f3ca4ddb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6789
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
      securityContext:
        fsGroup: 3002
      restartPolicy: Always
      volumes:
        - name: cfg-secret
          secret:
            secretName: nzbget-config
        - name: config
          emptyDir:
            medium: Memory
        - name: data
          hostPath:
            path: /data
            type: Directory
        - name: ca
          configMap:
            name: anshulg-ca
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
